fix  menu Collapse

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,10 @@ $bg-color-green: #91c280;
         border-color: $bg-color-primary;
         margin-top: 3%;
     }
+
+    .new-link {
+        margin-top: 10px;
+    }
     
     .button-align-right {
         text-align: right;
@@ -89,7 +93,7 @@ $bg-color-green: #91c280;
 
     ul {
         padding-left: 17px;
-        margin-top: 20px;
+        margin-top: 8px;
     }
 
     .mat-expansion-panel {
@@ -159,6 +163,14 @@ div .color-default, mat-panel-title .color-default {
     font-size: 24px;
     color: #333;
     font-weight: 400;
+}
+
+.alert-dark {
+    margin-bottom: 0;
+}
+
+.card-body {
+    background: #e8e8e8;
 }
 
 @media only screen and (min-width: 992px) {
